--- a/application/pom.xml
+++ b/application/pom.xml
@@ -36,12 +36,12 @@
     <dependency>
       <groupId>io.springfox</groupId>
       <artifactId>springfox-swagger2</artifactId>
-      <version>2.6.1</version>
+      <version>${springfox.version}</version>
     </dependency>
     <dependency>
       <groupId>io.springfox</groupId>
       <artifactId>springfox-swagger-ui</artifactId>
-      <version>2.7.0</version>
+      <version>${springfox.version}</version>
     </dependency>
 
   </dependencies>
