--- a/application/src/main/resources/application.yml
+++ b/application/src/main/resources/application.yml
@@ -1,13 +1,13 @@
 spring:
   application:
-    name: ranked-command-service
+    name: ranked
   datasource:
-    url: jdbc:h2:tcp://localhost:9092/mem:${spring.application.name}
+    url: jdbc:h2:tcp://localhost:9092/mem:ranked
     username: sa
     password: sa
   jpa:
-    generate-ddl: true
-    hibernate.ddl-auto: create
+    generate-ddl: false
+    hibernate.ddl-auto: none
     properties:
       hibernate:
         dialect: org.hibernate.dialect.H2Dialect
