--- a/model/src/main/resources/ValidationMessages.properties
+++ b/model/src/main/resources/ValidationMessages.properties
@@ -1,3 +1,4 @@
 ranked.model.matchSet.goals=Goals must be between 0 and 6!
+ranked.model.matchSet.ended=One team must have 6 goals to count the set!
 ranked.model.team.two.players=A team must have two different players!
 ranked.model.userName.too.short=The UserName must be at least 4 chars long!
