--- a/command/src/main/resources/ValidationMessages.properties
+++ b/command/src/main/resources/ValidationMessages.properties
@@ -1,1 +1,2 @@
-ranked.createMatch.disjunct=A player must only be in one of the teams!
+ranked.createMatch.disjunct=A player must only be a member of one team.
+ranked.createMatch.offense=A player must be in the team to play offense in a set.
