Initial frontend implementation

--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
     <module>view</module>
     <module>lib/axon</module>
     <module>application</module>
+    <module>frontend</module>
   </modules>
 
   <properties>
