--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
     <module>view</module>
     <module>lib/axon</module>
     <module>application</module>
+    <module>lib/extensions</module>
   </modules>
 
   <properties>
@@ -41,13 +42,21 @@
         <version>${project.version}</version>
       </dependency>
       <dependency>
+        <artifactId>ranked-command-service</artifactId>
+        <groupId>${project.groupId}</groupId>
+        <version>${project.version}</version>
+      </dependency>
+
+
+      <dependency>
         <artifactId>ranked-axon</artifactId>
         <groupId>${project.groupId}</groupId>
         <version>${project.version}</version>
       </dependency>
+
       <dependency>
-        <artifactId>ranked-command-service</artifactId>
-        <groupId>${project.groupId}</groupId>
+        <groupId>de.holisticon.ranked.extension</groupId>
+        <artifactId>ranked-kotlin-extensions</artifactId>
         <version>${project.version}</version>
       </dependency>
 
