--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,7 @@
     <kotlin-logging.version>1.4.6</kotlin-logging.version>
     <axon.version>3.0.7</axon.version>
     <springfox.version>2.7.0</springfox.version>
+	<spring-validator.version>1.1.0</spring-validator.version>
   </properties>
 
   <dependencyManagement>
@@ -68,7 +69,7 @@
       <dependency>
         <groupId>cz.jirutka.validator</groupId>
         <artifactId>validator-spring</artifactId>
-        <version>1.1.0</version>
+        <version>${spring-validator.version}</version>
       </dependency>
       <dependency>
         <groupId>io.github.microutils</groupId>
@@ -190,6 +191,7 @@
       </plugin>
     </plugins>
   </build>
+  
   <profiles>
     <profile>
       <id>frontend</id>
