--- a/command/src/main/resources/ValidationMessages.properties
+++ b/command/src/main/resources/ValidationMessages.properties
@@ -1,2 +1,3 @@
 ranked.createMatch.disjunct=A player must only be a member of one team.
 ranked.createMatch.offense=A player must be in the team to play offense in a set.
+ranked.createMatch.finished=Invalid number of matches in a set detected. 
