--- a/application/pom.xml
+++ b/application/pom.xml
@@ -22,6 +22,11 @@
       <groupId>${project.groupId}</groupId>
       <version>${project.version}</version>
     </dependency>
+    <dependency>
+      <artifactId>ranked-view-player</artifactId>
+      <groupId>${project.groupId}</groupId>
+      <version>${project.version}</version>
+    </dependency>
 
     <dependency>
       <artifactId>ranked-command</artifactId>
