--- a/h2/pom.xml
+++ b/h2/pom.xml
@@ -42,6 +42,10 @@
     </dependency>
 
 
+    <dependency>
+      <groupId>de.holisticon.ranked.extension</groupId>
+      <artifactId>ranked-kotlin-extensions</artifactId>
+    </dependency>
 
     <dependency>
       <groupId>org.axonframework</groupId>
