--- a/backend/application/pom.xml
+++ b/backend/application/pom.xml
@@ -43,6 +43,11 @@
       <artifactId>ranked-properties</artifactId>
     </dependency>
     <dependency>
+      <groupId>io.toolisticon.springboot</groupId>
+      <artifactId>springboot-swagger-starter</artifactId>
+    </dependency>
+
+    <dependency>
       <groupId>org.axonframework</groupId>
       <artifactId>axon-spring-boot-starter</artifactId>
       <version>${axon.version}</version>
