--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,12 @@
       </dependency>
 
       <dependency>
+        <groupId>io.toolisticon.springboot</groupId>
+        <artifactId>springboot-swagger-starter</artifactId>
+        <version>0.0.2</version>
+      </dependency>
+
+      <dependency>
         <groupId>org.axonframework</groupId>
         <artifactId>axon-spring-boot-starter</artifactId>
         <version>${axon.version}</version>
