--- a/backend/lib/axon/pom.xml
+++ b/backend/lib/axon/pom.xml
@@ -6,7 +6,7 @@
     <artifactId>ranked-root</artifactId>
     <groupId>de.holisticon.ranked</groupId>
     <version>0.0.1-SNAPSHOT</version>
-    <relativePath>../../pom.xml</relativePath>
+    <relativePath>../../../pom.xml</relativePath>
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
