--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -41,4 +41,11 @@
     </dependencies>
   </dependencyManagement>
 
+  <dependencies>
+    <dependency>
+      <groupId>io.swagger</groupId>
+      <artifactId>swagger-annotations</artifactId>
+    </dependency>
+  </dependencies>
+
 </project>
