axon 3.1.1 and swagger-starter 0.0.3, fixes #27, fixes #28

--- a/backend/application/src/main/resources/application.yml
+++ b/backend/application/src/main/resources/application.yml
@@ -26,6 +26,15 @@ ranked:
 
 swagger:
   redirect: true
+  apiInfo:
+    version: 1.0.0
+    termsOfService: None
+    lisense: Revised BSD License
+    licenseUrl: https://github.com/holisticon/ranked/blob/master/LICENSE.txt
+    contact:
+      name: Holisticon Craftsmen
+      email: jobs@holisticon.de
+      url: https://www.holisticon.de
   dockets:
     Views:
       basePackage: "de.holisticon.ranked.view"
@@ -33,26 +42,9 @@ swagger:
       apiInfo:
         title: Ranked View API
         description: View API to access different views in ranked.
-        version: 1.0.0
-        termsOfService: None
-        lisense: Revised BSD License
-        licenseUrl: https://github.com/holisticon/ranked/blob/master/LICENSE.txt
-        contact:
-          name: Holisticon Craftsmen
-          email: jobs@holisticon.de
-          url: https://www.holisticon.de
     Commands:
       basePackage: "de.holisticon.ranked.command"
       path: "/command/**"
       apiInfo:
         title: Ranked Command API
         description: Command API to access different views in ranked.
-        version: 1.0.0
-        termsOfService: None
-        lisense: Revised BSD License
-        licenseUrl: https://github.com/holisticon/ranked/blob/master/LICENSE.txt
-        contact:
-          name: Holisticon Craftsmen
-          email: jobs@holisticon.de
-          url: https://www.holisticon.de
-
