--- a/backend/application/src/main/resources/application.yml
+++ b/backend/application/src/main/resources/application.yml
@@ -60,3 +60,8 @@ swagger:
       apiInfo:
         title: Ranked Command API
         description: Command API to write to ranked.
+
+logging:
+  level:
+    de.holisticon.ranked: DEBUG
+
