introduce leaderboard player by elo, fixes #31
the leaderboard view now provides a get mapping that returns a sorted, descending list of UserName/Elo.

Also fixed:
- no additional viewConfiguration required anymore
- identification of tracking processors via type, not property

Enhancement
- typealias Elo

--- a/backend/application/src/main/resources/application.yml
+++ b/backend/application/src/main/resources/application.yml
@@ -63,5 +63,9 @@ swagger:
 
 logging:
   level:
+    com.zaxxer.hikari: WARN
     de.holisticon.ranked: DEBUG
-
+    org.springframework.web.servlet: WARN
+    org.springframework.boot.web.servlet: WARN
+    org.springframework.boot.actuate.endpoint.web.servlet: WARN
+    org.springframework.context.support: WARN
