--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "react": "15.3.2",
     "react-dom": "15.3.2",
+    "react-touch": "^0.4.3",
     "rest": "1.3.1",
     "webpack": "1.12.2"
   },
