--- a/backend/model/src/main/resources/ValidationMessages.properties
+++ b/backend/model/src/main/resources/ValidationMessages.properties
@@ -6,4 +6,4 @@ ranked.model.matchSet.ended=One team must have 6 goals to count the set.
 ranked.model.team.two.players=A team must have two different players.
 
 # Username
-ranked.model.userName.too.short=The username must be at least 4 chars long.
+ranked.model.id.too.short=The user-id must be at least 4 chars long.
