--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -21,7 +21,7 @@
 
     <module>command</module>
     <module>view</module>
-    <module>elo</module>
+    <module>services</module>
   </modules>
 
   <dependencyManagement>
@@ -35,11 +35,28 @@
         <artifactId>ranked-command</artifactId>
         <groupId>${project.groupId}</groupId>
         <version>${project.version}</version>
-
       </dependency>
       <dependency>
         <artifactId>ranked-model</artifactId>
         <groupId>${project.groupId}</groupId>
+        <version>${project.version}</version>
+      </dependency>
+
+      <dependency>
+        <groupId>de.holisticon.ranked.service</groupId>
+        <artifactId>ranked-user-service</artifactId>
+        <version>${project.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>de.holisticon.ranked.service</groupId>
+        <artifactId>ranked-elo-service</artifactId>
+        <version>${project.version}</version>
+      </dependency>
+
+
+      <dependency>
+        <groupId>de.holisticon.ranked.service</groupId>
+        <artifactId>ranked-elo-service</artifactId>
         <version>${project.version}</version>
       </dependency>
     </dependencies>
