Fix #44: implemented a better MatchAggregate and removed event de-composition on the command side

--- a/backend/application/src/main/resources/application.yml
+++ b/backend/application/src/main/resources/application.yml
@@ -64,7 +64,7 @@ swagger:
 logging:
   level:
     com.zaxxer.hikari: WARN
-    de.holisticon.ranked: DEBUG
+    de.holisticon.ranked: TRACE
     org.springframework.web.servlet: WARN
     org.springframework.boot.web.servlet: WARN
     org.springframework.boot.actuate.endpoint.web.servlet: WARN
