--- a/backend/model/pom.xml
+++ b/backend/model/pom.xml
@@ -20,6 +20,15 @@
       <groupId>cz.jirutka.validator</groupId>
       <artifactId>validator-spring</artifactId>
     </dependency>
-
+    <dependency>
+      <groupId>com.fasterxml.jackson.datatype</groupId>
+      <artifactId>jackson-datatype-jsr310</artifactId>
+      <version>2.9.2</version>
+    </dependency>
+    <dependency>
+      <groupId>com.fasterxml.jackson.module</groupId>
+      <artifactId>jackson-module-kotlin</artifactId>
+      <version>2.9.2</version>
+    </dependency>
   </dependencies>
 </project>
