Fixed localization error

--- a/backend/model/src/main/resources/ValidationMessages.properties
+++ b/backend/model/src/main/resources/ValidationMessages.properties
@@ -1,7 +1,7 @@
 # Matchset
 ranked.model.matchSet.goals=Goals must be between 0 and 6.
 ranked.model.matchSet.ended=One team must have 6 goals to count the set.
-
+ranked.model.matchSet.empty=A timed set must not be empty.
 # Team
 ranked.model.team.two.players=A team must have two different players.
 
