Added react redux router and routing to player selection

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,10 +6,15 @@
     "@types/react": "^16.0.34",
     "@types/react-dom": "^16.0.3",
     "@types/react-redux": "^5.0.14",
+    "@types/react-router-dom": "^4.2.3",
+    "@types/react-router-redux": "^5.0.11",
     "axios": "0.17.1",
+    "history": "^4.7.2",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.6",
+    "react-router-dom": "^4.2.2",
+    "react-router-redux": "^5.0.0-alpha.9",
     "react-scripts-ts": "2.10.0",
     "react-touch": "^0.4.3",
     "redux": "^3.7.2",
