--- a/frontend/src/main/resources/application.yml
+++ b/frontend/src/main/resources/application.yml
@@ -1,2 +1,19 @@
 server:
   port: 8080
+
+zuul:
+  debug:
+    request: true
+  routes:
+    command:
+      path: /command/**
+      url: http://localhost:8081/command
+    view:
+      path: /view/**
+      url: http://localhost:8081/view
+    swagger:
+      path: /swagger-ui.html
+      url: http://localhost:8081/swagger-ui.html
+    form:
+      path: /form
+      url: http://localhost:8081
