move dockerfiles to project root

--- a/backend/application/pom.xml
+++ b/backend/application/pom.xml
@@ -11,6 +11,10 @@
 
   <artifactId>ranked-application</artifactId>
 
+  <properties>
+    <dockerfile.skip>false</dockerfile.skip>
+  </properties>
+
   <dependencies>
     <dependency>
       <artifactId>ranked-view-wall</artifactId>
