--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
 
   <properties>
     <projectConfigScan>false</projectConfigScan>
+    <dockerfile.skip>true</dockerfile.skip>
 
     <kotlin.compiler.incremental>true</kotlin.compiler.incremental>
     <kotlin.version>1.2.10</kotlin.version>
@@ -32,8 +33,6 @@
     <spring-validator.version>1.1.0</spring-validator.version>
 
     <maven-docker.plugin>1.3.7</maven-docker.plugin>
-
-    <dockerfile.skip>true</dockerfile.skip>
   </properties>
 
   <dependencyManagement>
@@ -196,9 +195,11 @@
         <artifactId>dockerfile-maven-plugin</artifactId>
         <version>${maven-docker.plugin}</version>
         <configuration>
-          <repository>holisticon/ranked</repository>
+          <repository>holisticon/${project.artifactId}</repository>
           <tag>${project.version}</tag>
-
+          <buildArgs>
+            <JAR_FILE>${project.build.finalName}.jar</JAR_FILE>
+          </buildArgs>
         </configuration>
       </plugin>
     </plugins>
@@ -213,6 +214,26 @@
       <modules>
         <module>frontend</module>
       </modules>
+    </profile>
+    <profile>
+      <id>docker</id>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>com.spotify</groupId>
+            <artifactId>dockerfile-maven-plugin</artifactId>
+            <executions>
+              <execution>
+                <id>build</id>
+                <phase>install</phase>
+                <goals>
+                  <goal>build</goal>
+                </goals>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
     </profile>
   </profiles>
 
