--- a/test/h2/Dockerfile
+++ b/test/h2/Dockerfile
@@ -1,5 +1,9 @@
 FROM anapsix/alpine-java:8
-VOLUME /tmp
-ADD target/ranked-h2-0.0.1-SNAPSHOT.jar app.jar
+MAINTAINER Jan Galinski <jan.galinski@holisticon.de>
+
+ARG JAR_FILE
+ADD target/${JAR_FILE} /app.jar
+
 RUN bash -c 'touch /app.jar'
+
 ENTRYPOINT ["java","-Djava.security.egd=file:/dev/./urandom","-jar","/app.jar"]
