--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "webpack": "^3.10.0"
   },
   "scripts": {
+    "on": "webpack-dev-server",
     "start": "react-scripts-ts start",
     "build": "react-scripts-ts build",
     "test": "react-scripts-ts test --env=jsdom",
@@ -35,7 +36,9 @@
     "@types/react-touch": "^1.8.1",
     "awesome-typescript-loader": "^3.4.1",
     "css-loader": "^0.28.9",
+    "react-hot-loader": "^3.1.3",
     "source-map-loader": "^0.2.3",
-    "typescript": "^2.6.2"
+    "typescript": "^2.6.2",
+    "webpack-dev-server": "^2.11.1"
   }
 }
