--- a/backend/application/src/test/resources/application-itest.yml
+++ b/backend/application/src/test/resources/application-itest.yml
@@ -4,4 +4,6 @@ spring:
   jpa:
     generate-ddl: true
     hibernate.ddl-auto: create-drop
-
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.H2Dialect
