--- a/backend/command/pom.xml
+++ b/backend/command/pom.xml
@@ -54,10 +54,6 @@
       <groupId>cz.jirutka.validator</groupId>
       <artifactId>validator-spring</artifactId>
     </dependency>
-    <dependency>
-      <groupId>com.h2database</groupId>
-      <artifactId>h2</artifactId>
-    </dependency>
 
 
     <dependency>
@@ -70,6 +66,13 @@
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
     </dependency>
+
+    <dependency>
+      <groupId>com.h2database</groupId>
+      <artifactId>h2</artifactId>
+      <scope>test</scope>
+    </dependency>
+
 
   </dependencies>
 
