--- a/backend/application/src/main/resources/application-local.yml
+++ b/backend/application/src/main/resources/application-local.yml
@@ -1,3 +1,12 @@
 spring:
   datasource:
     url: jdbc:h2:tcp://localhost:9092/mem:ranked
+    username: sa
+    password: sa
+  jpa:
+    generate-ddl: false
+    hibernate.ddl-auto: none
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.H2Dialect
+    show-sql: false
