--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,7 +25,7 @@ services:
     ports:
       - "3306:3306"
     volumes:
-      - "/var/lib/docker/volumes/ranked-mysql-data/_data:/var/lib/mysql
+      - "/var/lib/docker/volumes/ranked-mysql-data/_data:/var/lib/mysql"
 
 
   # see https://github.com/dadarek/docker-wait-for-dependencies
