Added new interface to create users

--- a/backend/application/src/main/resources/application-local.yml
+++ b/backend/application/src/main/resources/application-local.yml
@@ -10,3 +10,11 @@ spring:
       hibernate:
         dialect: org.hibernate.dialect.H2Dialect
     show-sql: false
+
+logging:
+  level:
+    de.holisticon.ranked: TRACE
+#    org.springframework.web.servlet: WARN
+#    org.springframework.boot.web.servlet: WARN
+#    org.springframework.boot.actuate.endpoint.web.servlet: WARN
+#    org.springframework.context.support: WARN
