Fix #66 and fix #67

--- a/backend/application/src/main/resources/application.yml
+++ b/backend/application/src/main/resources/application.yml
@@ -29,7 +29,7 @@ axon:
     processors:
       Wall:
         mode: tracking
-      Player:
+      User:
         mode: tracking
       PlayerLeaderBoard:
         mode: tracking
