--- a/backend/application/src/main/resources/application.yml
+++ b/backend/application/src/main/resources/application.yml
@@ -29,7 +29,7 @@ axon:
     processors:
       Wall:
         mode: tracking
-      User:
+      Player:
         mode: tracking
       PlayerLeaderBoard:
         mode: tracking
