Revert "Merge branch 'feature/create-user'"
This reverts commit c9ca360603395371e87c5badb267b83a79120127, reversing
changes made to 198918a4d2f4c6fa68b4c2a18c1d9c0dbcedf44b.

--- a/backend/application/pom.xml
+++ b/backend/application/pom.xml
@@ -17,7 +17,22 @@
 
   <dependencies>
     <dependency>
+      <artifactId>ranked-view-wall</artifactId>
+      <groupId>${project.groupId}</groupId>
+      <version>${project.version}</version>
+    </dependency>
+    <dependency>
       <artifactId>ranked-properties</artifactId>
+      <groupId>${project.groupId}</groupId>
+      <version>${project.version}</version>
+    </dependency>
+    <dependency>
+      <artifactId>ranked-view-leaderboard</artifactId>
+      <groupId>${project.groupId}</groupId>
+      <version>${project.version}</version>
+    </dependency>
+    <dependency>
+      <artifactId>ranked-view-player</artifactId>
       <groupId>${project.groupId}</groupId>
       <version>${project.version}</version>
     </dependency>
@@ -26,18 +41,6 @@
       <groupId>${project.groupId}</groupId>
       <version>${project.version}</version>
     </dependency>
-
-    <dependency>
-      <artifactId>ranked-view-leaderboard</artifactId>
-      <groupId>${project.groupId}</groupId>
-      <version>${project.version}</version>
-    </dependency>
-    <dependency>
-      <artifactId>ranked-view-wall</artifactId>
-      <groupId>${project.groupId}</groupId>
-      <version>${project.version}</version>
-    </dependency>
-
 
     <dependency>
       <groupId>io.toolisticon.springboot</groupId>
